# rules_aws_lambda

./: .gitignore  README.md  WORKSPACE  package.json  requirements.txt  tsconfig.json
aws_lambda/: defs.bzl
examples/java/: BUILD.bazel  HelloWorld.java
examples/nodejs/: BUILD.bazel  hello_world.ts
examples/nodejs/lib/: BUILD.bazel  hello_lib.ts
examples/python/: BUILD.bazel  hello_world.py  utils.py
examples/python/lib/: BUILD.bazel  hello.py
